[package]
name = "registry_api"
version = "0.1.3"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Protryon/registry_api"
description = "Registry API implementation for crates.io"
keywords = [ "crate", "crates", "cratesio", "registry", "api" ]

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "0.9", features = ["serde"] }
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
log = "0.4"
env_logger = "0.6"
actix-web-httpauth = "0.4"
sha2 = "0.8"
hex = "0.4"
crc = "1.8"
arc-swap = "0.4"
tokio = { version = "0.2", features = ["full"] }
async-recursion = "0.3"
url = "2.1"
regex = "1.3"
lazy_static = "1.4"